# cool-transcriber

./: .gitignore  .replit  README.md  ROADMAP.md  api.py  audio_processor.py  generate_icons.py  main.py  manifest.json  pyproject.toml  replit.nix  requirements.txt  sw.js  translator.py  utils.py  youtube_processor.py
.streamlit/: config.toml
static/: manifest.json  sw.js
