[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.7",
    "openai>=1.60.0",
    "pillow>=11.1.0",
    "pydub>=0.25.1",
    "python-multipart>=0.0.20",
    "pytube==15.0.0",
    "speechrecognition>=3.14.0",
    "streamlit>=1.41.1",
    "uvicorn>=0.34.0",
]
